<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/margin_between_elements">

    <TextView
        android:id="@+id/textview_order_type_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_between_elements"
        android:text="@string/selected_type"
        android:textAppearance="?attr/textAppearanceHeadline6"
        android:textColor="@color/material_on_background_emphasis_high_type"
        android:textSize="@dimen/text_size_default"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/textview_order_type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_between_elements"
        android:textAppearance="?attr/textAppearanceHeadline6"
        android:textColor="@color/material_on_background_emphasis_medium"
        android:textSize="@dimen/text_size_default"
        app:layout_constraintTop_toBottomOf="@+id/textview_order_type_label"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/textview_order_flavor_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_between_elements"
        android:text="@string/selected_flavor"
        android:textAppearance="?attr/textAppearanceHeadline6"
        android:textColor="@color/material_on_background_emphasis_high_type"
        android:textSize="@dimen/text_size_default"
        app:layout_constraintTop_toBottomOf="@+id/textview_order_type"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/textview_order_flavor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_between_elements"
        android:textAppearance="?attr/textAppearanceHeadline6"
        android:textColor="@color/material_on_background_emphasis_medium"
        android:textSize="@dimen/text_size_default"
        app:layout_constraintTop_toBottomOf="@+id/textview_order_flavor_label"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/textview_order_quantity_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_between_elements"
        android:text="@string/selected_quantity"
        android:textAppearance="?attr/textAppearanceHeadline6"
        android:textColor="@color/material_on_background_emphasis_high_type"
        android:textSize="@dimen/text_size_default"
        app:layout_constraintTop_toBottomOf="@+id/textview_order_flavor"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/textview_order_quantity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_between_elements"
        android:textAppearance="?attr/textAppearanceHeadline6"
        android:textColor="@color/material_on_background_emphasis_medium"
        android:textSize="@dimen/text_size_default"
        app:layout_constraintTop_toBottomOf="@+id/textview_order_quantity_label"
        app:layout_constraintStart_toStartOf="parent"/>


</androidx.constraintlayout.widget.ConstraintLayout>