<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@color/white">
    <data>

        <variable
            name="viewModel"
            type="com.example.pancake.model.PancakeViewModel" />

        <variable
            name="summaryOrderFragment"
            type="com.example.pancake.SummaryOrderFragment" />

    </data>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/side_margin"
            android:orientation="vertical" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_between_elements"
                android:text="@string/order_summary"
                android:textAppearance="?attr/textAppearanceHeadline6"
                android:textColor="@color/black"
                android:textSize="@dimen/text_size_creator"
                android:fontFamily="@font/baloo"
                android:layout_gravity="center"/>


            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycler_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:overScrollMode="never"
                tools:listitem="@layout/list_item" />

            <Button
                android:id="@+id/pickup_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/side_margin"
                android:text="@string/select_pick_up_date"
                android:drawableLeft="@drawable/ic_date"
                style="@style/button"
                android:onClick="@{ () -> summaryOrderFragment.datePicker()}"/>


            <TextView
                android:id="@+id/textview_summary_pickup_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_between_elements"
                android:text="@{viewModel.date.toString()}"
                android:textAppearance="?attr/textAppearanceHeadline6"
                android:textColor="@color/black"
                android:textSize="@dimen/text_size_default" />

            <View
                android:id="@+id/divider3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_between_elements"
                style="@style/Divider" />

            <TextView
                android:id="@+id/textview_summary_total_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_between_elements"
                android:text="@{@string/total_price(viewModel.totalPrice.toString())}"
                android:textAppearance="?attr/textAppearanceHeadline6"
                android:textColor="@color/black"
                android:textSize="@dimen/text_size_default" />


            <View
                android:id="@+id/divider4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_between_elements"
                style="@style/Divider" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_between_elements">

                <Button
                    android:id="@+id/cancel_button"
                    style="@style/cancel_button"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/cancel"
                    android:layout_marginEnd="@dimen/side_margin"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/send_button"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:onClick="@{ () -> summaryOrderFragment.cancelOrderDialog()}"/>

                <Button
                    android:id="@+id/send_button"
                    style="@style/button"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/send"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:onClick="@{ () -> summaryOrderFragment.sendOrder()}"/>
            </androidx.constraintlayout.widget.ConstraintLayout>

            <View
                android:id="@+id/divider5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_between_elements"
                android:layout_marginBottom="@dimen/margin_between_elements"
                style="@style/Divider" />

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</layout>